correcting some weird widths and such on mobile

--- a/style.css
+++ b/style.css
@@ -83,15 +83,6 @@ ul {
   list-style-position: inside;
 }
 
-user agent stylesheet ul {
-  display: block;
-  list-style-type: disc;
-  margin-block-start: 1em;
-  margin-block-end: 1em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-  padding-inline-start: 40px;
-}
 
 .should-kern body {
   text-rendering: optimizeLegibility;
@@ -176,10 +167,6 @@ html {
   -webkit-text-size-adjust: 100%;
 }
 
-user agent stylesheet html {
-  color: -internal-root-color;
-}
-
 .new-header__inner:after,
 .new-header__inner:before {
   content: '';
@@ -251,7 +238,6 @@ header.new-header.pillar-scheme-- {
   grid-column: 3;
   grid-row: 1;
   align-content: space-between;
-  /* align-self: start; */
   justify-self: center;
   font-family: "Guardian Egyptian Web", Georgia, serif;
   font-size: 5em;
@@ -260,9 +246,6 @@ header.new-header.pillar-scheme-- {
   line-height: 60%;
   text-align: center;
   padding-right: 0.1em;
-
-
-
 }
 
 .filler {
@@ -314,7 +297,6 @@ html {
 
 .new-header__logo,
 .portfolio {
-  /* float: right; */
   margin-top: 1rem;
   margin-right: 1rem;
   margin-bottom: 1.5rem;
@@ -338,11 +320,6 @@ a {
   background: transparent;
 }
 
-user agent stylesheet a:-webkit-any-link {
-  color: -webkit-link;
-  cursor: pointer;
-  text-decoration: underline;
-}
 
 .should-kern body {
   text-rendering: optimizeLegibility;
@@ -508,14 +485,6 @@ p {
   margin-bottom: 0.5rem;
 }
 
-user agent stylesheet p {
-
-  margin-block-start: 1em;
-  margin-block-end: 1em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-}
-
 .index-page-header__description {
   display: flex;
   font-size: 0.8rem;
@@ -536,11 +505,6 @@ user agent stylesheet p {
   font-variant-ligatures: common-ligatures;
 }
 
-html,
-body {
-  text-rendering: optimizeSpeed;
-}
-
 body {
   line-height: 1.5;
   color: #121212;
@@ -555,6 +519,7 @@ nav {
   padding-left: 1em;
   justify-content: start;
   align-items: center;
+  width: max-content !important;
 
 }
 
@@ -728,10 +693,8 @@ p {
   border: 0.0625rem solid #bb3b80;
   font-size: 0.875rem;
   line-height: 1.375rem;
-
   margin-bottom: 0.75rem;
   text-rendering: auto;
-  color: buttontext;
   letter-spacing: normal;
   word-spacing: normal;
   text-transform: none;
@@ -775,10 +738,6 @@ p {
   height: 88%;
   width: 88%;
 }
-
-/* svg .comment-icon {
-  margin-bottom: -5px !important;
-} */
 
 svg {
   fill: #bb3b80;
@@ -1088,6 +1047,7 @@ div.letters {
   display: grid;
   grid-template-rows: 40% 30% 30%;
   grid-row-gap: 6%;
+  margin-left: 0;
   margin-bottom: 3em;
 }
 
@@ -1272,7 +1232,7 @@ header.new-header.pillar-scheme-- {
 @media (max-width: 1200px) {
 
   nav {
-    grid-template-columns: 100px 400px 400px 100px;
+    grid-template-columns: 10px 400px 400px 100px;
     font-size: 0.9em;
   }
 
@@ -1290,6 +1250,11 @@ header.new-header.pillar-scheme-- {
 }
 
 @media (max-width: 1100px) {
+
+  nav {
+    grid-auto-columns: 10% 70%;
+  }
+
 
   main {
     grid-template-columns: 50% 40%;
@@ -1319,6 +1284,8 @@ header.new-header.pillar-scheme-- {
 
 @media (max-width: 850px) {
 
+  
+
   nav {
     width: auto;
   }
@@ -1343,7 +1310,6 @@ header.new-header.pillar-scheme-- {
 
   nav {
     grid-template-columns: repeat(2, 420px);
-    max-width: 850px;
     font-size: 0.9em;
   }
 
@@ -1401,18 +1367,6 @@ header.new-header.pillar-scheme-- {
   }
 }
 
-@media (max-width: 700px) (min-width: 600px){
-  nav {
-    min-width: 600px;
-    grid-template-columns: 150px 200px 100px;
-    column-gap: 2px;
-    font-size: 80%;
-    padding: 5px;
-    justify-content: space-between;
-    height: 230px;
-
-  }
-}
 
 @media (max-width: 600px){
 
@@ -1530,7 +1484,6 @@ header.new-header.pillar-scheme-- {
     margin-left: 1em;
   }
   nav {
-
     column-gap: 0;
     grid-template-columns: 120px 200px;
     line-height: 12pt;
@@ -1548,6 +1501,24 @@ header.new-header.pillar-scheme-- {
     grid-column: 2;
     margin-right: 3em;
   } 
+  .component-button__content-pop {
+    display: flex;
+    width: 8em;
+    height: 0.5em;
+    margin-bottom: 3em;
+    font-size: 0.9em;
+    line-height: 12pt;
+    margin-right: -12px;
+  }
+
+  .contributions__adblock {
+    width: 300px;
+    margin-left: -100px;
+  }
+  .crossword__controls__clue {
+    display: flex;
+  }
+}
 
 @media (max-width: 400px) {
 
@@ -1558,8 +1529,20 @@ header.new-header.pillar-scheme-- {
     margin-left: 1em;
   }
 
+  .crossword__controls {
+    margin-top: 80px;
+
+  }
+  .crossword__controls__clue {
+    display: flex;
+  }
+
+  .contributions__adblock {
+    width: 300px;
+    margin-left: -100px;
+  }
+
   nav {
-    max-width: 465px;
     column-gap: 0;
     grid-template-columns: 120px 200px;
     line-height: 12pt;
@@ -1615,15 +1598,89 @@ header.new-header.pillar-scheme-- {
     letter-spacing: -3px;
     font-size: 30px;
     line-height: 12pt;
-    display: none !important;
   } 
 
   .clues {
-    /* grid-template-columns: 300px !important; */
     padding: 0;
     margin-left: 2em;
     font-size: 1em;
     justify-content: start;
   }
 
-  }}
+  }
+
+
+@media (max-width: 420px) {
+
+  .button-container {
+    margin-top: 65px
+  }
+
+  div.grid {
+    grid-column: 1;
+    grid-row: 1;
+    justify-self: start;
+    margin-left: 20px;
+    margin-right: 50px;
+    max-height: 400px;
+    min-height: 400px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+
+  nav {
+    column-gap: 0;
+    min-width: 400px;
+    grid-template-columns: 150px 50px 1fr;
+    line-height: 15pt;
+    min-width: 450px;
+    margin-right: 0
+
+  }
+
+  .top {
+    margin-left: 0;
+  }
+
+  .portfolio {
+    grid-column: 3;  
+    justify-self: center;
+    letter-spacing: -3px;
+    font-size: 60px;
+    line-height: 18pt;
+  } 
+
+  .clues {
+    padding: 0;
+    margin-left: 2em;
+    font-size: 1em;
+    justify-content: start;
+  }
+
+  }
+
+
+@media (max-width: 380px) {
+
+  .button-container {
+    margin-top: 0;
+  }
+
+  }
+  .top {
+    margin-left: 0;
+  }
+
+  .pillar-container {
+    overflow: scroll;
+    min-width: 100vw !important;
+    display: flex !important;
+  }
+
+
+  .new-header__inner {
+    margin-left: 0;
+  }
+
+  
